--- a/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
+++ b/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
@@ -3,8 +3,16 @@ layout: publication
 category: publication
 title: Extensible Proof Engineering in Intensional Type Theory
 authors: Gregory Malecha
+abstract: |
+  <p>
+  We increasingly rely on large, complex systems in our daily lives---from the computers that park our cars to the medical devices that regulate insulin levels to the servers that store our personal information in the cloud.  As these systems grow, they become too complex for a person to understand, yet it is essential that they are correct.  Proof assistants are tools that let us specify properties about complex systems and build, maintain, and check proofs of these properties in a rigorous way.  Proof assistants achieve this level of rigor for a wide range of properties by requiring detailed certificates (proofs) that can be easily checked.
+  </p><p>
+  In this dissertation, I describe a technique for compositionally building extensible automation within a foundational proof assistant for intensional type theory.  My technique builds on computational reflection---where properties are checked by verified programs---which effectively bridges the gap between the low-level reasoning that is native to the proof assistant and the interesting, high-level properties of real systems.  Building automation within a proof assistant provides a rigorous foundation that makes it possible to compose and extend the automation with other tools (including humans).  However, previous approaches require using low-level proofs to compose different automation which limits scalability.  My techniques allow for reasoning at a higher level about composing automation, which enables more scalable reflective reasoning.  I demonstrate these techniques through a series of case studies centered around tasks in program verification.
+  </p>
+
 links:
-- download:
+- download: /assets/publications/malecha-thesis.pdf
+- slides: /assets/publications/malecha-defense.pdf
 tags:
 - mirror-core
 - rtac
@@ -17,5 +25,5 @@ tags:
  school = {Harvard University},
  month = May,
  year = "2015",
- url = {http://gmalecha.github.io/publications/
+ url = {http://gmalecha.github.io/publication/2015/02/01/extensible-proof-engineering-in-intensional-type-theory.html}
 }
