--- a/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
+++ b/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
@@ -10,7 +10,6 @@ tags:
 - computational reflection
 - automation
 links:
- - abstract:
- - slides:
+ - abstract: /assets/publications/rtac-coqpl15.pdf
  - conference link: https://coqpl.cs.washington.edu/
 ---
