--- a/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
+++ b/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
@@ -11,7 +11,7 @@ abstract: |
   </p>
 
 links:
-- download: /assets/publications/malecha-thesis.pdf
+- download: /assets/publications/malecha-dissertation.pdf
 - slides: /assets/publications/malecha-defense.pdf
 tags:
 - mirror-core
@@ -21,9 +21,9 @@ tags:
 ---
 @PhdThesis{malecha2015thesis,
  title = {{Extensible Proof Engineering in Intensional Type Theory}},
- author = {Gregory Malecha},
+ author = {Gregory Michael Malecha},
  school = {Harvard University},
- month = May,
- year = "2015",
+ month = November,
+ year = "2014",
  url = {http://gmalecha.github.io/publication/2015/02/01/extensible-proof-engineering-in-intensional-type-theory.html}
 }
