--- a/_posts/2010-06-10-a-more-precise-security-type-system-for-dynamic-security-tests.bib
+++ b/_posts/2010-06-10-a-more-precise-security-type-system-for-dynamic-security-tests.bib
@@ -9,6 +9,9 @@ links:
 - tech report: http://www.people.fas.harvard.edu/~gmalecha/pub/jif-types-tr.pdf
 - original: http://www.people.fas.harvard.edu/~gmalecha/pub/malecha-plas10.pdf
 - publisher's link: http://portal.acm.org/citation.cfm?id=1814217.1814221
+tags:
+- information flow
+- security
 ---
 @inproceedings{malecha2010more-precise,
  author = {Malecha, Gregory and Chong, Stephen},
