--- a/_posts/2012-08-12-building-bedrock-verifying-a-program-verifier.bib
+++ b/_posts/2012-08-12-building-bedrock-verifying-a-program-verifier.bib
@@ -15,3 +15,10 @@ links:
  - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/coq12.pdf
  - conference link: https://coq.inria.fr/coq-workshop/2012
 ---
+@inproceedings{malecha2013compiling,
+  title="Building {B}edrock: Verifying a Program Verifier",
+  author="Gregory Malecha",
+  month="August",
+  year="2012",
+  conference="The Coq Workshop"
+}
