--- a/_posts/2013-01-17-compiling-coq-in-coq.bib
+++ b/_posts/2013-01-17-compiling-coq-in-coq.bib
@@ -5,4 +5,13 @@ title: Compiling Coq in Coq
 authors: Gregory Malecha
 links:
 - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/coq-compile.pdf
+tags:
+- coq
+- compilation
 ---
+@unpublished{malecha2013compiling,
+  title="Compiling {C}oq in {C}oq",
+  author="Gregory Malecha",
+  month="January",
+  year="2013"
+}
