--- a/_posts/2013-01-18-reflecting-modular-automation.bib
+++ b/_posts/2013-01-18-reflecting-modular-automation.bib
@@ -11,3 +11,10 @@ tags:
 link:
 - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/automation.pdf
 ---
+@unpublished{malecha2013reflecting,
+  title="Reflecting Modular Automation",
+  author="Gregory Malecha",
+  month="January",
+  year="2013",
+  url={http://gmalecha.github.io/publication/2013/01/18/reflecting-modular-automation.html}
+}
