--- a/_posts/2014-07-16-automating-abstract-logics.bib
+++ b/_posts/2014-07-16-automating-abstract-logics.bib
@@ -13,3 +13,9 @@ links:
  - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/malecha-coq14.pdf
  - conference link: http://vsl2014.at/meetings/Coq-index.html
 ---
+@inproceedings{malecha2014automating,
+  title="Automating Abstract Logics",
+  author="Gregory Malecha and Jesper Bengston and Adam Chlipala",
+  year="2014",
+  month="July"
+}
