--- a/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
+++ b/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
@@ -13,3 +13,10 @@ links:
  - abstract: /assets/publications/rtac-coqpl15.pdf
  - conference link: https://coqpl.cs.washington.edu/
 ---
+@inproceedings{malecha2015rtac-coqpl,
+  title="{Rtac}: A Fully Reflective Tactic Language",
+  author="Gregory Malecha and Jesper Bengtson",
+  month="January",
+  year="2015",
+  booktitle="CoqPL'15"
+}
