--- a/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
+++ b/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
@@ -20,9 +20,9 @@ tags:
 - computational reflection
 ---
 @PhdThesis{malecha2015thesis,
- title = {{Extensible Proof Engineering in Intensional Type Theory}},
- author = {Gregory Michael Malecha},
- school = {Harvard University},
+ title = "Extensible Proof Engineering in Intensional Type Theory",
+ author = "Gregory Michael Malecha",
+ school = "Harvard University",
  month = November,
  year = "2014",
  url = {http://gmalecha.github.io/publication/2015/02/01/extensible-proof-engineering-in-intensional-type-theory.html}
