fixing up some code and bib entries.

--- a/_posts/2009-08-31-effective-interactive-proofs-for-higher-order-imperative-programs.bib
+++ b/_posts/2009-08-31-effective-interactive-proofs-for-higher-order-imperative-programs.bib
@@ -16,23 +16,20 @@ tags:
 - coq
 - verification
 ---
-@article{Malecha201195,
-  title = "Trace-based verification of imperative programs with I/O ",
-  journal = "Journal of Symbolic Computation",
-  volume = "46",
-  number = "2",
-  pages = "95 - 118",
-  year = "2011",
-  note = "Automated Specification and Verification of Web Systems ",
-  issn = "0747-7171",
-  doi = "http://dx.doi.org/10.1016/j.jsc.2010.08.004",
-  url = "http://www.sciencedirect.com/science/article/pii/S0747717110001343",
-  author = "Gregory Malecha and Greg Morrisett and Ryan Wisnesky",
-  keywords = "Program verification",
-  keywords = "Separation logic",
-  keywords = "Dependent types",
-  keywords = "Traces",
-  keywords = "Imperative programming",
-  keywords = "Ynot ",
-  abstract = "In this paper we demonstrate how to prove the correctness of systems implemented using low-level imperative features like pointers, files, and socket I/O with respect to high level I/O protocol descriptions by using the Coq proof assistant. We present a web-based course gradebook application developed with Ynot, a Coq library for verified imperative programming. We add a dialog-based I/O system to Ynot, and we extend Ynot’s underlying Hoare logic with event traces to reason about I/O and protocol behavior. Expressive abstractions allow the modular verification of both high level specifications like privacy guarantees and low level properties like data structure pointer invariants."
+@inproceedings{chlipala2009effective,
+ author = {Chlipala, Adam and Malecha, Gregory and Morrisett, Greg and Shinnar, Avraham and Wisnesky, Ryan},
+ title = {Effective {I}nteractive {P}roofs for {H}igher-order {I}mperative {P}rograms},
+ booktitle = {Proceedings of the 14th ACM SIGPLAN International Conference on Functional Programming},
+ series = {ICFP '09},
+ year = {2009},
+ isbn = {978-1-60558-332-7},
+ location = {Edinburgh, Scotland},
+ pages = {79--90},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/1596550.1596565},
+ doi = {10.1145/1596550.1596565},
+ acmid = {1596565},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {dependent types, functional programming, interactive proof assistants, separation logic},
 }
