--- a/_posts/2015-09-23-towards-verification-of-hybrid-systems-in-a-foundational-proof-assistant.bib
+++ b/_posts/2015-09-23-towards-verification-of-hybrid-systems-in-a-foundational-proof-assistant.bib
@@ -13,8 +13,7 @@ tags:
 - verification
 ---
 @inproceedings{ricketts2015towards,
-  title={Towards {V}erification of {H}ybrid {S}ystems in a {F}oundational {P
-}roof {A}ssistant},
+  title={Towards {V}erification of {H}ybrid {S}ystems in a {F}oundational {P}roof {A}ssistant},
   author={Daniel Ricketts and Gregory Malecha and Mario M. Alvarez and Vignesh Gowda and Sorin Lerner},
   year=2015
 }
