moving a bunch of files and fixing up links.

--- a/_posts/2010-01-15-trace-based-verification-of-imperative-programs-with-io.bib
+++ b/_posts/2010-01-15-trace-based-verification-of-imperative-programs-with-io.bib
@@ -6,7 +6,7 @@ authors: Gregory Malecha and Greg Morrisett and Ryan Wisnesky
 abstract: |
   In this paper we demonstrate how to prove the correctness of systems implemented using low-level imperative features like pointers, files, and socket I/O with respect to high level I/O protocol descriptions by using the Coq proof assistant. We present a web-based course gradebook application developed with Ynot, a Coq library for verified imperative programming. We add a dialog-based I/O system to Ynot, and we extend Ynot’s underlying Hoare logic with event traces to reason about I/O and protocol behavior. Expressive abstractions allow the modular verification of both high level specifications like privacy guarantees and low level properties like data structure pointer invariants.
 links:
-- download: http://www.people.fas.harvard.edu/~gmalecha/pub/jsc-wwv-10.pdf
+- download: /publications/files/jsc-wwv-10.pdf
 - publisher's link: http://www.sciencedirect.com/science/article/pii/S0747717110001343
 tags:
 - ynot
