--- a/_posts/2013-01-17-compiling-coq-in-coq.bib
+++ b/_posts/2013-01-17-compiling-coq-in-coq.bib
@@ -4,7 +4,7 @@ category: publication
 title: Compiling Coq in Coq
 authors: Gregory Malecha
 links:
-- slides: http://www.people.fas.harvard.edu/~gmalecha/pub/coq-compile.pdf
+- slides: /publications/files/coq-compile.pdf
 tags:
 - coq
 - compilation
