--- a/_posts/2013-01-18-reflecting-modular-automation.bib
+++ b/_posts/2013-01-18-reflecting-modular-automation.bib
@@ -8,8 +8,8 @@ tags:
 - coq
 - mirror-shard
 - computational reflection
-link:
-- slides: http://www.people.fas.harvard.edu/~gmalecha/pub/automation.pdf
+links:
+- slides: /publications/files/automation.pdf
 ---
 @unpublished{malecha2013reflecting,
   title="Reflecting Modular Automation",
