--- a/_posts/2014-07-14-compositional-computational-reflection.bib
+++ b/_posts/2014-07-14-compositional-computational-reflection.bib
@@ -11,8 +11,8 @@ tags:
 abstract: |
   Current work on computational reflection is single-minded; each reflective procedure is written with a specific application or scope in mind. Composition of these reflective procedures is done by a proof- generating tactic language such as Ltac. This composition, however, comes at the cost of both larger proof terms and redundant preprocessing. In this work, we propose a methodology for writing composable reflective procedures that solve many small tasks in a single invocation. The key technical insights are techniques for reasoning semantically about extensible syntax in intensional type theory. Our techniques make it possible to compose sound procedures and write generic procedures parametrized by lemmas mimicking Coq’s support for hint databases.
 links:
- - download: http://www.people.fas.harvard.edu/~gmalecha/pub/ccr-itp14.pdf
- - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/malecha-itp14-slides.pdf
+ - download: /publications/files/ccr-itp14.pdf
+ - slides: /publications/files/malecha-itp14-slides.pdf
  - publisher's link: http://link.springer.com/chapter/10.1007%2F978-3-319-08970-6_24
  - conference link: http://www.cs.uwyo.edu/~ruben/itp-2014/
 ---
