--- a/_posts/2014-07-16-automating-abstract-logics.bib
+++ b/_posts/2014-07-16-automating-abstract-logics.bib
@@ -10,12 +10,14 @@ tags:
 - automation
 - talk
 links:
- - slides: http://www.people.fas.harvard.edu/~gmalecha/pub/malecha-coq14.pdf
+ - slides: /publications/files/malecha-coq14.pdf
  - conference link: http://vsl2014.at/meetings/Coq-index.html
 ---
-@inproceedings{malecha2014automating,
+@article{malecha2014automating,
   title="Automating Abstract Logics",
   author="Gregory Malecha and Jesper Bengston and Adam Chlipala",
+  booktitle={The 6th Coq Workshop},
+  location={Vienna, Autria},
   year="2014",
   month="July"
 }
