updated the bib entry for the memocode paper.

--- a/_posts/2015-09-23-towards-verification-of-hybrid-systems-in-a-foundational-proof-assistant.bib
+++ b/_posts/2015-09-23-towards-verification-of-hybrid-systems-in-a-foundational-proof-assistant.bib
@@ -13,7 +13,12 @@ tags:
 - verification
 ---
 @inproceedings{ricketts2015towards,
-  title={Towards {V}erification of {H}ybrid {S}ystems in a {F}oundational {P}roof {A}ssistant},
-  author={Daniel Ricketts and Gregory Malecha and Mario M. Alvarez and Vignesh Gowda and Sorin Lerner},
-  year=2015
+  author={Ricketts, Daniel and Malecha, Gregory and Alvarez, Mario M. and Gowda, Vignesh and Lerner, Sorin}, 
+  booktitle={Formal Methods and Models for Codesign (MEMOCODE), 2015 ACM/IEEE International Conference on}, 
+  title={Towards verification of hybrid systems in a foundational proof assistant}, 
+  year={2015},
+  pages={248-257},
+  keywords={Cognition;Computer architecture;Differential equations;Safety;Sensors;Software;Upper bound}, 
+  doi={10.1109/MEMCOD.2015.7340492},
+  month={Sept}
 }
