fixing misspelling of Jesper's name.

--- a/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.bib
+++ b/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.bib
@@ -3,7 +3,7 @@ layout: publication
 category: publication
 title: |
   Extensible and Efficient Automation through Reflective Tactics
-authors: Gregory Malecha and Jesper Bengston
+authors: Gregory Malecha and Jesper Bengtson
 tags:
 - coq
 - rtac
