--- a/_posts/2010-01-15-trace-based-verification-of-imperative-programs-with-io.bib
+++ b/_posts/2010-01-15-trace-based-verification-of-imperative-programs-with-io.bib
@@ -8,6 +8,7 @@ abstract: |
 links:
 - download: /publications/files/jsc-wwv-10.pdf
 - publisher's link: http://www.sciencedirect.com/science/article/pii/S0747717110001343
+where: JSC'11
 tags:
 - ynot
 - separation logic
