--- a/_posts/2010-01-20-toward-a-verified-relational-database-management-system.bib
+++ b/_posts/2010-01-20-toward-a-verified-relational-database-management-system.bib
@@ -3,6 +3,7 @@ layout: publication
 categories: publication
 title: Toward a verified relational database management system
 authors: Gregory Malecha, Greg Morrisett, Avraham Shinnar, and Ryan Wisnesky
+where: POPL'10
 tags:
 - ynot
 - coq
