--- a/_posts/2010-09-01-mechanized-verification-with-sharing.bib
+++ b/_posts/2010-09-01-mechanized-verification-with-sharing.bib
@@ -3,6 +3,7 @@ layout: publication
 categories: publication
 title: Mechanized Verification with Sharing
 authors: Gregory Malecha, Greg Morrisett
+where: ICTAC'10
 tags:
 - coq
 - separation logic
