--- a/_posts/2012-08-12-building-bedrock-verifying-a-program-verifier.bib
+++ b/_posts/2012-08-12-building-bedrock-verifying-a-program-verifier.bib
@@ -4,6 +4,7 @@ categories: publication
 title: |
   Building Bedrock: Verifying a Program Verifier
 authors: Gregory Malecha, Adam Chlipala, Thomas Braibant, Patrick Hulin, and Edward Yang
+where: Coq'13
 tags:
 - mirror-shard
 - coq
