--- a/_posts/2013-01-17-compiling-coq-in-coq.bib
+++ b/_posts/2013-01-17-compiling-coq-in-coq.bib
@@ -1,8 +1,9 @@
 ---
 layout: publication
-category: publication
+category: talk
 title: Compiling Coq in Coq
 authors: Gregory Malecha
+where: Talk @ INRIA
 links:
 - slides: /publications/files/coq-compile.pdf
 tags:
