--- a/_posts/2013-01-18-reflecting-modular-automation.bib
+++ b/_posts/2013-01-18-reflecting-modular-automation.bib
@@ -1,8 +1,9 @@
 ---
 layout: publication
-category: publication
+category: talk
 title: Reflecting Modular Automation
 authors: Gregory Malecha
+where: Talk @ INRIA
 tags:
 - talk
 - coq
