--- a/_posts/2013-05-28-mirror-shard-proof-by-reflection-with-verified-hints.bib
+++ b/_posts/2013-05-28-mirror-shard-proof-by-reflection-with-verified-hints.bib
@@ -4,6 +4,7 @@ categories: publication
 title: |
   MirrorShard: Proof by Computational Reflection with Verified Hints
 authors: Gregory Malecha, Adam Chlipala, Thomas Braibant, Patrick Hulin, and Edward Yang
+where: Tech Report
 tags:
 - mirror-shard
 - coq
