--- a/_posts/2014-07-14-compositional-computational-reflection.bib
+++ b/_posts/2014-07-14-compositional-computational-reflection.bib
@@ -3,6 +3,7 @@ layout: publication
 categories: publication
 title: Compositional Computational Reflection
 authors: Gregory Malecha, Thomas Braibant, and Adam Chlipala
+where: ITP'14
 tags:
 - mirror-core
 - coq
