--- a/_posts/2014-07-16-automating-abstract-logics.bib
+++ b/_posts/2014-07-16-automating-abstract-logics.bib
@@ -3,6 +3,7 @@ layout: publication
 categories: publication
 title: Automating Abstract Logics (a.k.a. Implementing Reflective Tactics)
 authors: Gregory Malecha, Jesper Bengston, and Adam Chlipala
+where: Coq'14
 tags:
 - mirror-core
 - coq
