--- a/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
+++ b/_posts/2015-01-18-rtac-a-fully-reflective-tactic-language.bib
@@ -4,6 +4,7 @@ category: publication
 title: |
   Rtac: A Fully Reflective Tactic Language
 authors: Gregory Malecha and Jesper Bengston
+where: CoqPL'15
 tags:
 - rtac
 - coq
