--- a/_posts/2015-08-04-using-dependent-types-and-tactics-to-enable-semantic-optimization-of-language-integrated-queries.bib
+++ b/_posts/2015-08-04-using-dependent-types-and-tactics-to-enable-semantic-optimization-of-language-integrated-queries.bib
@@ -3,6 +3,7 @@ layout: publication
 categories: publication
 title: Using Dependent Types and Tactics to Enable Semantic Optimization of Language-Integrated Queries
 authors: Gregory Malecha and Ryan Wisneskey
+where: DBPL'15
 tags:
 - coq
 - refinment
