--- a/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.bib
+++ b/_posts/2016-01-01-extensible-and-efficient-automation-through-reflective-tactics.bib
@@ -4,6 +4,7 @@ category: publication
 title: |
   Extensible and Efficient Automation through Reflective Tactics
 authors: Gregory Malecha and Jesper Bengtson
+where: ESOP'16
 tags:
 - coq
 - rtac
