--- a/_posts/2010-06-10-a-more-precise-security-type-system-for-dynamic-security-tests.bib
+++ b/_posts/2010-06-10-a-more-precise-security-type-system-for-dynamic-security-tests.bib
@@ -3,6 +3,7 @@ layout: publication
 category: publication
 title: A More Precise Security Type System for Dynamic Security Tests
 authors: Gregory Malecha and Stephen Chong
+where: PLAS'10
 abstract: |
   The move toward publically available services that store private information has increased the importance of tracking information flow in applications. For example, network systems that store credit-card transactions and medical records must be assured to maintain the confidentiality and integrity of this information. One way to ensure this is to use a language that supports static reasoning about information flow in the type system. While useful in practice, current type systems for checking information flow are imprecise, unnecessarily rejecting safe programs. This annoys programmers and often results in increased code complexity in order to work around these artificial limitations. In this work, we present a new type system for statically checking information flow properties of imperative programs with exceptions. Our key insight is to propagate a context of exception handlers and check exceptions at the throw point rather than propagating exceptions outward and checking them at the catch sites. We prove that our type system guarantees the standard non-interference condition and that it is strictly more permissive than the existing type system for Jif, a language that extends the Java type system to reason about information flow.
 links:
