--- a/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
+++ b/_posts/2015-02-01-extensible-proof-engineering-in-intensional-type-theory.bib
@@ -3,6 +3,7 @@ layout: publication
 category: publication
 title: Extensible Proof Engineering in Intensional Type Theory
 authors: Gregory Malecha
+where: PhD Dissertation
 abstract: |
   <p>
   We increasingly rely on large, complex systems in our daily lives---from the computers that park our cars to the medical devices that regulate insulin levels to the servers that store our personal information in the cloud.  As these systems grow, they become too complex for a person to understand, yet it is essential that they are correct.  Proof assistants are tools that let us specify properties about complex systems and build, maintain, and check proofs of these properties in a rigorous way.  Proof assistants achieve this level of rigor for a wide range of properties by requiring detailed certificates (proofs) that can be easily checked.
